--- a/CascableCore iOS Demo (Obj-C)/Base.lproj/Main.storyboard
+++ b/CascableCore iOS Demo (Obj-C)/Base.lproj/Main.storyboard
@@ -154,6 +154,26 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" id="WQi-T1-bqc">
+                                        <rect key="frame" x="0.0" y="178" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WQi-T1-bqc" id="mxZ-vq-zo0">
+                                            <rect key="frame" x="0.0" y="0.0" width="342" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="File System" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zjy-oN-1VM">
+                                                    <rect key="frame" x="18" y="11.5" width="88" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="zjy-oN-1VM" firstAttribute="leading" secondItem="mxZ-vq-zo0" secondAttribute="leadingMargin" constant="10" id="X7H-1s-he3"/>
+                                                <constraint firstItem="zjy-oN-1VM" firstAttribute="centerY" secondItem="mxZ-vq-zo0" secondAttribute="centerY" id="oyP-tF-sQo"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
                                 </cells>
                             </tableViewSection>
                         </sections>
@@ -174,6 +194,7 @@
                         <segue destination="fRu-Nr-x5d" kind="show" identifier="liveViewShooting" id="pk3-oz-anl"/>
                         <segue destination="3Tj-x2-QQe" kind="unwind" identifier="unwindToDiscovery" unwindAction="unwindToDiscovery:" id="BDt-0u-tsl"/>
                         <segue destination="cPX-vi-IeP" kind="show" identifier="properties" id="1LI-dS-j9M"/>
+                        <segue destination="Eqs-Ga-sLp" kind="show" identifier="filesystem" id="ZpZ-pP-KF6"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="scI-LW-nzg" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -237,7 +258,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="j38-b8-SbG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2805.5999999999999" y="-149.77511244377811"/>
+            <point key="canvasLocation" x="2806" y="-575"/>
         </scene>
         <!--Properties-->
         <scene sceneID="Ira-gq-vBh">
@@ -299,7 +320,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PxT-bu-1Wi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2808" y="501"/>
+            <point key="canvasLocation" x="2806" y="99"/>
         </scene>
         <!--Shot Preview-->
         <scene sceneID="nbO-mh-WYE">
@@ -331,7 +352,95 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oBu-m8-zpg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3601" y="-150"/>
+            <point key="canvasLocation" x="3601" y="-576"/>
+        </scene>
+        <!--File System-->
+        <scene sceneID="fLB-VS-y3M">
+            <objects>
+                <tableViewController title="File System" id="Eqs-Ga-sLp" customClass="FilesystemViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="100" sectionHeaderHeight="18" sectionFooterHeight="18" id="ilA-yc-6tI">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <view key="tableHeaderView" contentMode="scaleToFill" id="FdU-pW-b5A">
+                            <rect key="frame" x="0.0" y="0.0" width="375" height="90"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <subviews>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The code for this screen can be found in CameraFileScanning.m, FilesystemItemCell.m, and FilesystemViewController.m." textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pEB-BX-ySA">
+                                    <rect key="frame" x="20" y="8" width="335" height="74"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <constraints>
+                                <constraint firstItem="pEB-BX-ySA" firstAttribute="top" secondItem="FdU-pW-b5A" secondAttribute="top" constant="8" id="4qT-Dc-NRN"/>
+                                <constraint firstAttribute="bottom" secondItem="pEB-BX-ySA" secondAttribute="bottom" constant="8" id="WB4-00-Fmt"/>
+                                <constraint firstItem="pEB-BX-ySA" firstAttribute="leading" secondItem="FdU-pW-b5A" secondAttribute="leading" constant="20" id="cfl-sf-PuT"/>
+                                <constraint firstAttribute="trailing" secondItem="pEB-BX-ySA" secondAttribute="trailing" constant="20" id="iqv-Je-j7f"/>
+                            </constraints>
+                        </view>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="itemCell" rowHeight="100" id="l5y-gV-4rx" customClass="FilesystemItemCell">
+                                <rect key="frame" x="0.0" y="145.5" width="375" height="100"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="l5y-gV-4rx" id="Cqp-hG-YgC">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="TXl-V6-npA">
+                                            <rect key="frame" x="18" y="16" width="90" height="67.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="90" id="I9K-47-cy3"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="File name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bgy-oK-4ia">
+                                            <rect key="frame" x="128" y="23" width="239" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="alP-6B-Z9S">
+                                            <rect key="frame" x="128" y="52" width="239" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="SAP-41-r5S">
+                                            <rect key="frame" x="53" y="40" width="20" height="20"/>
+                                        </activityIndicatorView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="alP-6B-Z9S" firstAttribute="top" secondItem="bgy-oK-4ia" secondAttribute="bottom" constant="8" id="4FG-Gt-00g"/>
+                                        <constraint firstItem="bgy-oK-4ia" firstAttribute="leading" secondItem="TXl-V6-npA" secondAttribute="trailing" constant="20" id="A5O-DA-rdG"/>
+                                        <constraint firstItem="TXl-V6-npA" firstAttribute="top" secondItem="Cqp-hG-YgC" secondAttribute="topMargin" constant="8" id="ARb-55-KBd"/>
+                                        <constraint firstItem="SAP-41-r5S" firstAttribute="centerX" secondItem="TXl-V6-npA" secondAttribute="centerX" id="EL1-ie-9Yd"/>
+                                        <constraint firstItem="bgy-oK-4ia" firstAttribute="top" secondItem="Cqp-hG-YgC" secondAttribute="topMargin" constant="15" id="LKf-bI-waQ"/>
+                                        <constraint firstItem="alP-6B-Z9S" firstAttribute="trailing" secondItem="bgy-oK-4ia" secondAttribute="trailing" id="RVn-R6-lgu"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="TXl-V6-npA" secondAttribute="bottom" constant="8" id="ilb-IG-27c"/>
+                                        <constraint firstItem="SAP-41-r5S" firstAttribute="centerY" secondItem="TXl-V6-npA" secondAttribute="centerY" id="nHS-Cm-g3J"/>
+                                        <constraint firstItem="TXl-V6-npA" firstAttribute="leading" secondItem="Cqp-hG-YgC" secondAttribute="leadingMargin" constant="10" id="oyi-DW-W3O"/>
+                                        <constraint firstItem="bgy-oK-4ia" firstAttribute="trailing" secondItem="Cqp-hG-YgC" secondAttribute="trailingMargin" id="sPK-Ot-uor"/>
+                                        <constraint firstItem="alP-6B-Z9S" firstAttribute="leading" secondItem="bgy-oK-4ia" secondAttribute="leading" id="tTm-UI-vAS"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="dateLabel" destination="alP-6B-Z9S" id="7vX-bR-YSE"/>
+                                    <outlet property="fileNameLabel" destination="bgy-oK-4ia" id="pdb-hS-6S2"/>
+                                    <outlet property="loadingSpinner" destination="SAP-41-r5S" id="caQ-sE-1yX"/>
+                                    <outlet property="thumbnailImageView" destination="TXl-V6-npA" id="QHL-Nh-eQH"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Eqs-Ga-sLp" id="7rl-rd-6Bw"/>
+                            <outlet property="delegate" destination="Eqs-Ga-sLp" id="aR3-GB-vdC"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VYh-1n-Khk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2805.5999999999999" y="782.15892053973016"/>
         </scene>
     </scenes>
 </document>
